--- a/Slice.Web/appsettings.Development.json
+++ b/Slice.Web/appsettings.Development.json
@@ -3,7 +3,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=Pa$$w0rd; Database=Slice"
   }
 }
