--- a/Slice.Web/Slice.Web.csproj
+++ b/Slice.Web/Slice.Web.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Slice.Persistence\Slice.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
