--- a/Slice.Web/Slice.Web.csproj
+++ b/Slice.Web/Slice.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Slice.Persistence\Slice.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Customer\" />
+  </ItemGroup>
+
 </Project>
