Added and configured roles and test them all and updated some services

--- a/Slice.Web/Slice.Web.csproj
+++ b/Slice.Web/Slice.Web.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Slice.Persistence\Slice.Persistence.csproj" />
+    <ProjectReference Include="..\Slice.Utilities\Slice.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
