--- a/Slice.Utilities/Slice.Utilities.csproj
+++ b/Slice.Utilities/Slice.Utilities.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.17.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.2" />
   </ItemGroup>
 
