--- a/Slice.Web/Slice.Web.csproj
+++ b/Slice.Web/Slice.Web.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    <PackageReference Include="Stripe.net" Version="39.98.0" />
   </ItemGroup>
 
   <ItemGroup>
