--- a/Slice.Utilities/Slice.Utilities.csproj
+++ b/Slice.Utilities/Slice.Utilities.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.17.0" />
+    <PackageReference Include="MailKit" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.2" />
+    <PackageReference Include="MimeKit" Version="3.2.0" />
+    <PackageReference Include="SendGrid" Version="9.27.0" />
   </ItemGroup>
 
 </Project>
