Added Facebook Authentication

--- a/Slice.Web/appsettings.json
+++ b/Slice.Web/appsettings.json
@@ -17,5 +17,9 @@
   },
   "SendGrid": {
     "SecretKey": "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"
+  },
+  "Facebook": {
+    "AppId": "532247198320280",
+    "AppSecret": "5b7d1bb2dd07f647d38b89e49a423992"
   }
 }
